<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YourNews</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_event">Add Event</string>
    <string name="add_classified">Add Classified</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">location</string>
    <string name="contact">Contact</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="title_activity_map"></string>
    <string name="title_activity_article"></string>
    <string name="title_activity_home"></string>
    <string name="title_activity_tab_listener"></string>
    <string name="title_activity_news_tab"></string>
    <string name="title_activity_events_tab"></string>
    <string name="title_activity_add_event"></string>
    <string name="title_activity_classifieds"></string>
    <string name="title_activity_add_classified"></string>
    <string name="title_activity_show_event"></string>
    <string name="title_activity_show_classified"></string>
    <string name="title_activity_entry_screen">Yournews</string>

</resources>
