<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@drawable/appbackground">

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:inputType="text"
        android:hint="@string/title"
        android:ems="10" >
    
    <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/location"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" >

    </EditText>
    
    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="number" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:onClick="newClassified"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:onClick="selectImage"
        android:text="Select Image" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/contact"
        android:layout_toRightOf="@+id/button1" />

</RelativeLayout>
</ScrollView>